0.3.3 (201x-xx-xx)
  * Added enumerate.partitions function.
  * Renamed functions sample.partition & process.partitions to
    sample.partitions & process.partitions.

0.3.2 (2017-05-24)
  * Spin down the Scala interpreter/compiler when the package is unloaded using
    the .rscalaPackageUnload function.
  * Removed Apache Commons Math JAR file and now get it from the
    commonsMath package.
  * Circumvent a weird bug in the class loader of Scala 2.11.x.

0.3.1 (2017-05-11)
  * Initial release to CRAN.
