@@ -30,6 +30,7 @@ export(nsubsets.variance)
 export(sample.partitions)
 export(process.partitions)
 export(enumerate.partitions)
+export(partition.pmf)
 
 S3method("print", "shallot.mass")
 S3method("print", "shallot.discount")
