@@ -1,4 +1,5 @@
 0.3.3 (201x-xx-xx)
+  * Added partition.pmf function that returns the probability mass function.
   * Added enumerate.partitions function.
   * Renamed functions sample.partition & process.partitions to
     sample.partitions & process.partitions.
